# Papergrid

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: daily-generate.yml
data/: product_history.json
src/: config.py  main.py
src/generator/: pdf_builder.py  product_ideas.py
src/listing/: etsy_copy.py
src/pinterest/: api.py  pin_creator.py
templates/: .gitkeep
